common/logs/fun_trainer_loop.err
python3: can't open file '/root/projects/Bubbles-payload/funpumper/fun_trainer_loop': [Errno 2] No such file or directory
  File "/root/projects/Bubbles-payload/funpumper/fun_trainer_loop.py", line 27
    pass pass
    ^
IndentationError: expected an indented block after 'with' statement on line 25
